# hw06-stephaniefan06

./: .buildinfo  Makefile  _config.yml  _toc.yml  conf.py  environment.yml  index.ipynb  intro.md  objects.inv  search.html
.doctrees/: environment.pickle
.doctrees/.pytest_cache/: README.doctree
.doctrees/ligotools/.pytest_cache/: README.doctree
.ipynb_checkpoints/: index-checkpoint.html
.pytest_cache/: README.html
_build/.doctrees/: environment.pickle  hw06-description.doctree  index.doctree  intro.doctree  markdown.doctree  notebooks.doctree
_build/html/: README.html  genindex.html  hw06-description.html  index.html  searchindex.js
_build/html/.doctrees/: README.doctree
_build/jupyter_execute/: index.ipynb  index.py
_sources/: index.ipynb
ligotools/: setup.cfg
ligotools/.pytest_cache/: README.html
ligotools/ligotools/: __init__.py
ligotools/ligotools.egg-info/: PKG-INFO  SOURCES.txt
ligotools/ligotools/tests/: test_readligo.py  test_utils.py
ligotools/ligotools/utils/: utils.py
