# Declarative configuration for setup.py

# For more details on this format, see the official docs here:
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# And a useful annotated template can be found here:
# https://gist.github.com/althonos/6914b896789d3f2078d1e6237642c35c

[metadata]
name             = ligotools
version          = attr: ligotools.__version__
author           = Ligo Scientific Collaboration (LSC) and Yiping Fan
author_email     = losc@ligo.caltech.edu and stephanie06@berkeley.edu
description      = A Python library with tools to read LIGO data files
long_description = 
	This module provides tools for reading LIGO data 
	files.  Data along with supporting documentation
	can be downloaded from the losc web site:
	https://losc.ligo.org
long_description_content_type = text/markdown
keywords         = tools, LIGO
license          = BSD 3-Clause License
classifiers      =
	Programming Language :: Python :: 2
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
python_requires  = >= 2.7,
install_requires =
	tqdm

[options.packages.find]
exclude =
    examples*
    docs*
    mytoy.tests*
